Add Vercel Analytics

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^4.1.1",
     "@studio-freight/lenis": "^1.0.29",
+    "@vercel/analytics": "^1.5.0",
     "formik": "^2.4.5",
     "gsap": "^3.12.4",
     "next": "14.0.4",
