--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/node": "24.0.14",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
