--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
-    "@studio-freight/lenis": "^1.0.29",
+    "@studio-freight/lenis": "^1.0.42",
     "@vercel/analytics": "^1.5.0",
-    "formik": "^2.4.5",
-    "gsap": "^3.12.4",
+    "formik": "^2.4.6",
+    "gsap": "^3.13.0",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "yup": "^1.3.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "24.0.14",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
