--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.6",
     "gsap": "^3.13.0",
     "next": "14.0.4",
+    "portfolio": "link:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "yup": "^1.7.0"
