--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
-    "@studio-freight/lenis": "^1.0.42",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "formik": "^2.4.6",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "next": "14.0.4",
     "portfolio": "link:",
     "react": "^18.3.1",
