--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "portfolio": "link:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "ukiyojs": "^4.2.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
